[gd_scene load_steps=17 format=2]

[ext_resource path="res://Scripts/OutsideItems.gd" type="Script" id=1]
[ext_resource path="res://Assets/quan.ttf" type="FontFile" id=2]
[ext_resource path="res://Assets/WoodItem.png" type="Texture2D" id=3]
[ext_resource path="res://Assets/WoodSelected.png" type="Texture2D" id=4]
[ext_resource path="res://Assets/LeafItem.png" type="Texture2D" id=5]
[ext_resource path="res://Assets/FoodItem.png" type="Texture2D" id=6]
[ext_resource path="res://Assets/LeafSelected.png" type="Texture2D" id=7]
[ext_resource path="res://Assets/FoodSelected.png" type="Texture2D" id=8]

[sub_resource type="ImageTexture" id=1]

[sub_resource type="CircleShape2D" id=2]
radius = 0.5

[sub_resource type="CircleShape2D" id=3]

[sub_resource type="FontFile" id=4]
size = 8
outline_size = 1
font_data = ExtResource( 2 )

[sub_resource type="RectangleShape2D" id=5]
size = Vector2( 18, 6 )

[sub_resource type="FontFile" id=6]
size = 8
outline_size = 1
font_data = ExtResource( 2 )

[sub_resource type="RectangleShape2D" id=7]
size = Vector2( 18, 6 )

[sub_resource type="FontFile" id=8]
outline_size = 1
use_mipmaps = true
font_data = ExtResource( 2 )

[node name="OutsideItems" type="CharacterBody2D"]
collision_layer = 52
collision_mask = 0
script = ExtResource( 1 )

[node name="OutsideItems" type="Sprite2D" parent="."]
texture = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="MarkAsTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="MarkAsButton" type="TouchScreenButton" parent="."]
position = Vector2( -10, -10 )
shape = SubResource( 3 )

[node name="WoodItem" type="Sprite2D" parent="."]
visible = false
texture = ExtResource( 3 )

[node name="WoodSelected" type="Sprite2D" parent="WoodItem"]
visible = false
texture = ExtResource( 4 )

[node name="LeafItem" type="Sprite2D" parent="."]
visible = false
texture = ExtResource( 5 )

[node name="LeafSelected" type="Sprite2D" parent="LeafItem"]
visible = false
texture = ExtResource( 7 )

[node name="FoodItem" type="Sprite2D" parent="."]
visible = false
texture = ExtResource( 6 )

[node name="FoodSelected" type="Sprite2D" parent="FoodItem"]
visible = false
texture = ExtResource( 8 )

[node name="Node2D" type="Control" parent="."]
visible = false
offset_left = -39.0
offset_top = -4.0
offset_right = 39.0
offset_bottom = 16.0
custom_minimum_size = Vector2( 78, 20 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="MarkasLabel" type="Label" parent="Node2D"]
anchor_left = 0.118421
anchor_top = -0.4
anchor_right = 0.907895
theme_override_colors/font_outline_color = Color( 0, 0, 0, 1 )
theme_override_fonts/font = SubResource( 4 )
text = "Mark as "
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="YesButton" type="TouchScreenButton" parent="Node2D"]
position = Vector2( 0, 2 )
shape = SubResource( 5 )

[node name="Label" type="Label" parent="Node2D/YesButton"]
offset_left = 2.0
offset_top = 2.0
offset_right = 34.0
offset_bottom = 10.0
custom_minimum_size = Vector2( 32, 6 )
theme_override_colors/font_outline_color = Color( 0, 0, 0, 1 )
theme_override_fonts/font = SubResource( 6 )
text = "Yes?"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="NoButton" type="TouchScreenButton" parent="Node2D"]
position = Vector2( 41, 2 )
shape = SubResource( 7 )

[node name="Label" type="Label" parent="Node2D/NoButton"]
offset_left = 2.0
offset_top = 2.0
offset_right = 34.0
offset_bottom = 10.0
custom_minimum_size = Vector2( 32, 6 )
theme_override_colors/font_outline_color = Color( 0, 0, 0, 1 )
theme_override_fonts/font = SubResource( 6 )
text = "									No?"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="AmountLabel" type="Label" parent="Node2D"]
anchor_left = 0.384615
anchor_top = 0.1
anchor_right = 0.641026
anchor_bottom = 0.9
theme_override_colors/font_outline_color = Color( 0, 0, 0, 1 )
theme_override_fonts/font = SubResource( 8 )
text = "99"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[connection signal="timeout" from="MarkAsTimer" to="." method="_on_MarkAsTimer_timeout"]
[connection signal="pressed" from="MarkAsButton" to="." method="_on_MarkAsButton_pressed"]
[connection signal="released" from="Node2D/YesButton" to="." method="_on_YesButton_released"]
[connection signal="released" from="Node2D/NoButton" to="." method="_on_NoButton_released"]
